--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -149,9 +149,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3e16afc",
+   "metadata": {},
+   "source": [
+    "The Quicksort algorithm takes an array of values, chooses one of the values as the 'pivot' element, and moves the other values so that lower values are on the left of the pivot element, and higher values are on the right of it. = o(n2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c23a4aee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [5, 11, 12, 12, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def quickshort(array, low=0, high=None):\n",
+    "    if high is None:\n",
+    "        high = len(array) - 1\n",
+    "\n",
+    "    if low < high:\n",
+    "        pivot_index = partition(array, low, high)\n",
+    "        quickshort(array, low, pivot_index-1)\n",
+    "        quickshort(array,pivot_index+1, high)\n",
+    "\n",
+    "def partition(array, low, high):\n",
+    "    pivot = array[high]\n",
+    "    i = low - 1\n",
+    "\n",
+    "    for j in range(low, high):\n",
+    "        if array[j] <= pivot:\n",
+    "            i += 1\n",
+    "            array[i], array[j] = array[j], array[i]\n",
+    "    array[i+1], array[high] = array[high], array[i+1]\n",
+    "    return i+1\n",
+    "\n",
+    "my_array = [64,34,25,12,12,11,90,5]\n",
+    "quickshort(my_array)\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3a9cb93",
+   "metadata": {},
+   "source": [
+    "The Counting Sort algorithm sorts an array by counting the number of times each value occurs. = o(n + k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7df75a3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 2, 2, 3, 3, 3, 4, 5, 6, 6, 65]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def countingSort(arr):\n",
+    "    if not arr:\n",
+    "        return arr\n",
+    "    \n",
+    "    max_val = max(arr)\n",
+    "    count = [0] *( max_val + 1)\n",
+    "    \n",
+    "    for num in arr:\n",
+    "        count[num] += 1\n",
+    "    \n",
+    "    arr[:] = []\n",
+    "\n",
+    "    for num, freq in enumerate(count):\n",
+    "        arr.extend([num] * freq)\n",
+    "\n",
+    "    return arr\n",
+    "\n",
+    "unsortedArr = [4, 2, 2, 6, 3, 3, 1, 6, 5, 2, 3,65]\n",
+    "sortedArr = countingSort(unsortedArr)\n",
+    "print(sortedArr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9a5a487",
+   "metadata": {},
+   "source": [
+    "The Radix Sort algorithm sorts an array by individual digits, starting with the least significant digit (the rightmost one). = o(n2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c23a4aee",
+   "id": "a93ab300",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array [170, 45, 75, 90, 802, 24, 2, 66]\n",
+      "802\n",
+      "Sorted array: [2, 24, 45, 66, 75, 90, 170, 802]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myArray = [170, 45, 75, 90, 802, 24, 2, 66]\n",
+    "print(\"Original array\", myArray)\n",
+    "radixArray = [[], [], [], [], [], [], [], [], [], []]\n",
+    "maxVal = max(myArray)\n",
+    "exp = 1\n",
+    "\n",
+    "while maxVal // exp > 0:\n",
+    "\n",
+    "    while len(myArray) > 0:\n",
+    "        val = myArray.pop()\n",
+    "        radixIndex = (val // exp) % 10\n",
+    "        radixArray[radixIndex].append(val)\n",
+    "\n",
+    "    for bucket in radixArray:\n",
+    "        while len(bucket) > 0:\n",
+    "            val = bucket.pop()\n",
+    "            myArray.append(val)\n",
+    "\n",
+    "    exp *= 10\n",
+    "print(\"Sorted array:\", myArray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bb595acf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "802\n"
+     ]
+    }
+   ],
+   "source": [
+    "exp = 1\n",
+    "exp *= 10\n",
+    "print(exp)\n",
+    "print(802 // 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63019f25",
    "metadata": {},
    "outputs": [],
    "source": []
