--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -289,31 +289,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a1b6152",
+   "metadata": {},
+   "source": [
+    "The Merge Sort algorithm is a divide-and-conquer algorithm that sorts an array by first breaking it down into smaller arrays, and then building the array back together the correct way so that it is sorted. = O( n ⋅log n)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "bb595acf",
+   "execution_count": 2,
+   "id": "63019f25",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "802\n"
+      "Sorted array: [-13, -10, 3, 6, 7, 15, 23.5, 55]\n"
      ]
     }
    ],
    "source": [
-    "exp = 1\n",
-    "exp *= 10\n",
-    "print(exp)\n",
-    "print(802 // 1)"
+    "def mergeSort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "\n",
+    "    mid = len(arr) // 2\n",
+    "    leftHalf = arr[:mid]\n",
+    "    rightHalf = arr[mid:]\n",
+    "\n",
+    "    sortedLeft = mergeSort(leftHalf)\n",
+    "    sortedRight = mergeSort(rightHalf)\n",
+    "\n",
+    "    return merge(sortedLeft, sortedRight)\n",
+    "\n",
+    "def merge(left, right):\n",
+    "    result = []\n",
+    "    i = j = 0\n",
+    "\n",
+    "    while i < len(left) and j < len(right):\n",
+    "        if left[i] < right[j]:\n",
+    "            result.append(left[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            result.append(right[j])\n",
+    "            j += 1\n",
+    "    \n",
+    "    result.extend(left[i:])\n",
+    "    result.extend(right[j:])\n",
+    "    return result\n",
+    "\n",
+    "unsortedArr = [3, 7, 6, -10, 15, 23.5, 55, -13]\n",
+    "sortedArr = mergeSort(unsortedArr)\n",
+    "print(\"Sorted array:\", sortedArr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b3977c0",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bf2590d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values 9 found at index 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def linearSearch(arr, targetValue):\n",
+    "    for i in range(len(arr)):\n",
+    "        if arr[i] == targetValue:\n",
+    "            return i\n",
+    "    return -1\n",
+    "arr = [3,7,4,9,3]\n",
+    "targetValue = 9\n",
+    "\n",
+    "result = linearSearch(arr, targetValue)\n",
+    "if result != -1:\n",
+    "    print(\"Values\",targetValue,\"found at index\", result)\n",
+    "else:\n",
+    "    print(\"Value\",targetValue,\"not found\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63019f25",
+   "id": "da212a5a",
    "metadata": {},
    "outputs": [],
    "source": []
