--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -349,7 +349,9 @@
    "cell_type": "markdown",
    "id": "2b3977c0",
    "metadata": {},
-   "source": []
+   "source": [
+    "The Linear Search algorithm searches through an array and returns the index of the value it searches for."
+   ]
   },
   {
    "cell_type": "code",
@@ -382,9 +384,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8de8d1e",
+   "metadata": {},
+   "source": [
+    "The Binary Search algorithm searches through an array and returns the index of the value it searches for."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "da212a5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "Value 4 found at index 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def binarySearch(arr, targetvalue):\n",
+    "    left = 0\n",
+    "    right = len(arr) -1\n",
+    "    while left <= right:\n",
+    "        mid = (left + right) // 2\n",
+    "        print(mid)\n",
+    "        if arr[mid] == targetvalue:\n",
+    "            return mid\n",
+    "        \n",
+    "        if arr[mid] < targetvalue:\n",
+    "            left = mid + 1\n",
+    "        else:\n",
+    "            right = mid - 1\n",
+    "    return -1\n",
+    "\n",
+    "myArray = [1,2,3,4,5,6,7,8,9,10]\n",
+    "myTarget = 4\n",
+    "\n",
+    "result = binarySearch(myArray, myTarget)\n",
+    "\n",
+    "if result != -1:\n",
+    "    print(\"Value\", myTarget, \"found at index\", result)\n",
+    "else:\n",
+    "    print(\"Taget not found in array\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da212a5a",
+   "id": "38cc9622",
    "metadata": {},
    "outputs": [],
    "source": []
